test/for/error/for-error-end.lua
-- Errore nella sintassi del ciclo for
-- end mancante
for i = 1, 10, 1 do
    print(i)

